--- a/TechSol_API_Proj/TechSol_API_Proj.csproj
+++ b/TechSol_API_Proj/TechSol_API_Proj.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
   <ItemGroup>
