--- a/TechSol_API_Proj/appsettings.json
+++ b/TechSol_API_Proj/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TechSolutionsDB": "Data Source=localhost;Initial Catalog=TechSolutionsDB;Integrated Security=True"
+  }
 }
